// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppsSupportItem should match a snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <div
        class="el-card-wrap"
      >
        <div
          class="el-card-list-main-wrap"
        >
          <h5
            class="el-card-list-heading"
          >
            MOCK_APP_NAME
          </h5>
          <h6
            class="el-card-list-sub-heading"
          >
            Will Test DevCo
          </h6>
        </div>
        <div
          class="el-card-list-item"
        >
          <div
            class="el-card-list-icon"
          >
            <span
              class="el-icon"
            >
              <svg />
            </span>
          </div>
          <div
            class="el-card-list-item-text-wrap"
          >
            <div
              class="el-card-list-item-text-primary"
            >
              Website
            </div>
            <div
              class="el-card-list-item-text-secondary"
            >
              <a
                href="https://foo.bar"
                rel="noopener noreferrer"
                target="_blank"
              >
                https://foo.bar
              </a>
            </div>
          </div>
        </div>
        <div
          class="el-card-list-item"
        >
          <div
            class="el-card-list-icon"
          >
            <span
              class="el-icon"
            >
              <svg />
            </span>
          </div>
          <div
            class="el-card-list-item-text-wrap"
          >
            <div
              class="el-card-list-item-text-primary"
            >
              Support Email
            </div>
            <div
              class="el-card-list-item-text-secondary"
            >
              <a
                href="mailto:foo@bar.com"
                rel="noopener noreferrer"
                target="_blank"
              >
                foo@bar.com
              </a>
            </div>
          </div>
        </div>
        <div
          class="el-card-list-item"
        >
          <div
            class="el-card-list-icon"
          >
            <span
              class="el-icon"
            >
              <svg />
            </span>
          </div>
          <div
            class="el-card-list-item-text-wrap"
          >
            <div
              class="el-card-list-item-text-primary"
            >
              Telephone
            </div>
            <div
              class="el-card-list-item-text-secondary"
            >
              07777777777
            </div>
          </div>
        </div>
        <div
          class="el-card-list-item"
        >
          <div
            class="el-card-list-icon"
          >
            <span
              class="el-icon"
            >
              <svg />
            </span>
          </div>
          <div
            class="el-card-list-item-text-wrap"
          >
            <div
              class="el-card-list-item-text-primary"
            >
              Terms and Conditions
            </div>
            <div
              class="el-card-list-item-text-secondary"
            >
              <a
                href="https://foo.bar"
                rel="noopener noreferrer"
                target="_blank"
              >
                https://foo.bar
              </a>
            </div>
          </div>
        </div>
        <div
          class="el-card-list-item"
        >
          <div
            class="el-card-list-icon"
          >
            <span
              class="el-icon"
            >
              <svg />
            </span>
          </div>
          <div
            class="el-card-list-item-text-wrap"
          >
            <div
              class="el-card-list-item-text-primary"
            >
              Privacy Policy
            </div>
            <div
              class="el-card-list-item-text-secondary"
            >
              <a
                href="https://foo.bar"
                rel="noopener noreferrer"
                target="_blank"
              >
                https://foo.bar
              </a>
            </div>
          </div>
        </div>
        <div
          class="el-card-list-item"
        >
          <div
            class="el-card-list-icon"
          >
            <span
              class="el-icon"
            >
              <svg />
            </span>
          </div>
          <div
            class="el-card-list-item-text-wrap"
          >
            <div
              class="el-card-list-item-text-primary"
            >
              Pricing Policy
            </div>
            <div
              class="el-card-list-item-text-secondary"
            >
              <a
                href="https://foo.bar"
                rel="noopener noreferrer"
                target="_blank"
              >
                https://foo.bar
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <div
      class="el-card-wrap"
    >
      <div
        class="el-card-list-main-wrap"
      >
        <h5
          class="el-card-list-heading"
        >
          MOCK_APP_NAME
        </h5>
        <h6
          class="el-card-list-sub-heading"
        >
          Will Test DevCo
        </h6>
      </div>
      <div
        class="el-card-list-item"
      >
        <div
          class="el-card-list-icon"
        >
          <span
            class="el-icon"
          >
            <svg />
          </span>
        </div>
        <div
          class="el-card-list-item-text-wrap"
        >
          <div
            class="el-card-list-item-text-primary"
          >
            Website
          </div>
          <div
            class="el-card-list-item-text-secondary"
          >
            <a
              href="https://foo.bar"
              rel="noopener noreferrer"
              target="_blank"
            >
              https://foo.bar
            </a>
          </div>
        </div>
      </div>
      <div
        class="el-card-list-item"
      >
        <div
          class="el-card-list-icon"
        >
          <span
            class="el-icon"
          >
            <svg />
          </span>
        </div>
        <div
          class="el-card-list-item-text-wrap"
        >
          <div
            class="el-card-list-item-text-primary"
          >
            Support Email
          </div>
          <div
            class="el-card-list-item-text-secondary"
          >
            <a
              href="mailto:foo@bar.com"
              rel="noopener noreferrer"
              target="_blank"
            >
              foo@bar.com
            </a>
          </div>
        </div>
      </div>
      <div
        class="el-card-list-item"
      >
        <div
          class="el-card-list-icon"
        >
          <span
            class="el-icon"
          >
            <svg />
          </span>
        </div>
        <div
          class="el-card-list-item-text-wrap"
        >
          <div
            class="el-card-list-item-text-primary"
          >
            Telephone
          </div>
          <div
            class="el-card-list-item-text-secondary"
          >
            07777777777
          </div>
        </div>
      </div>
      <div
        class="el-card-list-item"
      >
        <div
          class="el-card-list-icon"
        >
          <span
            class="el-icon"
          >
            <svg />
          </span>
        </div>
        <div
          class="el-card-list-item-text-wrap"
        >
          <div
            class="el-card-list-item-text-primary"
          >
            Terms and Conditions
          </div>
          <div
            class="el-card-list-item-text-secondary"
          >
            <a
              href="https://foo.bar"
              rel="noopener noreferrer"
              target="_blank"
            >
              https://foo.bar
            </a>
          </div>
        </div>
      </div>
      <div
        class="el-card-list-item"
      >
        <div
          class="el-card-list-icon"
        >
          <span
            class="el-icon"
          >
            <svg />
          </span>
        </div>
        <div
          class="el-card-list-item-text-wrap"
        >
          <div
            class="el-card-list-item-text-primary"
          >
            Privacy Policy
          </div>
          <div
            class="el-card-list-item-text-secondary"
          >
            <a
              href="https://foo.bar"
              rel="noopener noreferrer"
              target="_blank"
            >
              https://foo.bar
            </a>
          </div>
        </div>
      </div>
      <div
        class="el-card-list-item"
      >
        <div
          class="el-card-list-icon"
        >
          <span
            class="el-icon"
          >
            <svg />
          </span>
        </div>
        <div
          class="el-card-list-item-text-wrap"
        >
          <div
            class="el-card-list-item-text-primary"
          >
            Pricing Policy
          </div>
          <div
            class="el-card-list-item-text-secondary"
          >
            <a
              href="https://foo.bar"
              rel="noopener noreferrer"
              target="_blank"
            >
              https://foo.bar
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppsSupportItem should match a snapshot where details not supplied 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <div
        class="el-card-wrap"
      >
        <div
          class="el-card-list-main-wrap"
        >
          <h5
            class="el-card-list-heading"
          >
            MOCK_APP_NAME
          </h5>
          <h6
            class="el-card-list-sub-heading"
          />
        </div>
        <div
          class="el-card-list-item"
        >
          <div
            class="el-card-list-icon"
          >
            <span
              class="el-icon"
            >
              <svg />
            </span>
          </div>
          <div
            class="el-card-list-item-text-wrap"
          >
            <div
              class="el-card-list-item-text-primary"
            >
              Website
            </div>
            <div
              class="el-card-list-item-text-secondary"
            >
              Not Supplied
            </div>
          </div>
        </div>
        <div
          class="el-card-list-item"
        >
          <div
            class="el-card-list-icon"
          >
            <span
              class="el-icon"
            >
              <svg />
            </span>
          </div>
          <div
            class="el-card-list-item-text-wrap"
          >
            <div
              class="el-card-list-item-text-primary"
            >
              Support Email
            </div>
            <div
              class="el-card-list-item-text-secondary"
            >
              Not Supplied
            </div>
          </div>
        </div>
        <div
          class="el-card-list-item"
        >
          <div
            class="el-card-list-icon"
          >
            <span
              class="el-icon"
            >
              <svg />
            </span>
          </div>
          <div
            class="el-card-list-item-text-wrap"
          >
            <div
              class="el-card-list-item-text-primary"
            >
              Telephone
            </div>
            <div
              class="el-card-list-item-text-secondary"
            >
              Not Supplied
            </div>
          </div>
        </div>
        <div
          class="el-card-list-item"
        >
          <div
            class="el-card-list-icon"
          >
            <span
              class="el-icon"
            >
              <svg />
            </span>
          </div>
          <div
            class="el-card-list-item-text-wrap"
          >
            <div
              class="el-card-list-item-text-primary"
            >
              Terms and Conditions
            </div>
            <div
              class="el-card-list-item-text-secondary"
            >
              Not Supplied
            </div>
          </div>
        </div>
        <div
          class="el-card-list-item"
        >
          <div
            class="el-card-list-icon"
          >
            <span
              class="el-icon"
            >
              <svg />
            </span>
          </div>
          <div
            class="el-card-list-item-text-wrap"
          >
            <div
              class="el-card-list-item-text-primary"
            >
              Privacy Policy
            </div>
            <div
              class="el-card-list-item-text-secondary"
            >
              Not Supplied
            </div>
          </div>
        </div>
        <div
          class="el-card-list-item"
        >
          <div
            class="el-card-list-icon"
          >
            <span
              class="el-icon"
            >
              <svg />
            </span>
          </div>
          <div
            class="el-card-list-item-text-wrap"
          >
            <div
              class="el-card-list-item-text-primary"
            >
              Pricing Policy
            </div>
            <div
              class="el-card-list-item-text-secondary"
            >
              Free
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <div
      class="el-card-wrap"
    >
      <div
        class="el-card-list-main-wrap"
      >
        <h5
          class="el-card-list-heading"
        >
          MOCK_APP_NAME
        </h5>
        <h6
          class="el-card-list-sub-heading"
        />
      </div>
      <div
        class="el-card-list-item"
      >
        <div
          class="el-card-list-icon"
        >
          <span
            class="el-icon"
          >
            <svg />
          </span>
        </div>
        <div
          class="el-card-list-item-text-wrap"
        >
          <div
            class="el-card-list-item-text-primary"
          >
            Website
          </div>
          <div
            class="el-card-list-item-text-secondary"
          >
            Not Supplied
          </div>
        </div>
      </div>
      <div
        class="el-card-list-item"
      >
        <div
          class="el-card-list-icon"
        >
          <span
            class="el-icon"
          >
            <svg />
          </span>
        </div>
        <div
          class="el-card-list-item-text-wrap"
        >
          <div
            class="el-card-list-item-text-primary"
          >
            Support Email
          </div>
          <div
            class="el-card-list-item-text-secondary"
          >
            Not Supplied
          </div>
        </div>
      </div>
      <div
        class="el-card-list-item"
      >
        <div
          class="el-card-list-icon"
        >
          <span
            class="el-icon"
          >
            <svg />
          </span>
        </div>
        <div
          class="el-card-list-item-text-wrap"
        >
          <div
            class="el-card-list-item-text-primary"
          >
            Telephone
          </div>
          <div
            class="el-card-list-item-text-secondary"
          >
            Not Supplied
          </div>
        </div>
      </div>
      <div
        class="el-card-list-item"
      >
        <div
          class="el-card-list-icon"
        >
          <span
            class="el-icon"
          >
            <svg />
          </span>
        </div>
        <div
          class="el-card-list-item-text-wrap"
        >
          <div
            class="el-card-list-item-text-primary"
          >
            Terms and Conditions
          </div>
          <div
            class="el-card-list-item-text-secondary"
          >
            Not Supplied
          </div>
        </div>
      </div>
      <div
        class="el-card-list-item"
      >
        <div
          class="el-card-list-icon"
        >
          <span
            class="el-icon"
          >
            <svg />
          </span>
        </div>
        <div
          class="el-card-list-item-text-wrap"
        >
          <div
            class="el-card-list-item-text-primary"
          >
            Privacy Policy
          </div>
          <div
            class="el-card-list-item-text-secondary"
          >
            Not Supplied
          </div>
        </div>
      </div>
      <div
        class="el-card-list-item"
      >
        <div
          class="el-card-list-icon"
        >
          <span
            class="el-icon"
          >
            <svg />
          </span>
        </div>
        <div
          class="el-card-list-item-text-wrap"
        >
          <div
            class="el-card-list-item-text-primary"
          >
            Pricing Policy
          </div>
          <div
            class="el-card-list-item-text-secondary"
          >
            Free
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
